fix: issue with visible font

--- a/src/_fonts.scss
+++ b/src/_fonts.scss
@@ -10,6 +10,7 @@
          url('/assets/fonts/roboto-v20-vietnamese_latin-ext_latin_greek-ext_greek_cyrillic-ext_cyrillic-regular.woff') format('woff'); /* Modern Browsers */
         //  url('/assets/fonts/roboto-v20-vietnamese_latin-ext_latin_greek-ext_greek_cyrillic-ext_cyrillic-regular.ttf') format('truetype'), /* Safari, Android, iOS */
         //  url('/assets/fonts/roboto-v20-vietnamese_latin-ext_latin_greek-ext_greek_cyrillic-ext_cyrillic-regular.svg#Roboto') format('svg'); /* Legacy iOS */
+        font-display: swap; // Ensure text remains visible during webfont load
   }
 
 
@@ -19,6 +20,7 @@
     font-style: normal;
     font-weight: 400;
     src: url('/assets/fonts/flUhRq6tzZclQEJ-Vdg-IuiaDsNc.woff2') format('woff2');
+    font-display: swap;
   }
   
   .material-icons {
